# spectral_gap_nhep

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cleanup.sh  layout.r  main.py  main_qaoa.py  pyproject.toml  qaoa_utils.py  qnd_hyper.py  reproduction.sh  requirements.txt  session_store.db  slurm.sh  spectral_gap_calculator.py  spsa_hp_results.csv  submit.sh
.github/workflows/: quality.yml
analysis/: layout.r  plot.r
analysis/img-tikz/: anneal_schedule.tex  energy_selected.tex  energy_stat.tex  gap_selected.tex  gap_stat.tex  qaoa_energy.tex  qaoa_params.tex
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T11.59.12.945Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T11.59.45.552Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T12.00.18.297Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T12.01.52.511Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T12.02.51.452Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T12.03.33.245Z/: trackrecon_parameters.json
analysis/proceedings_results/00_parameters/trackrecon_parameters.json/2024-12-04T13.07.24.835Z/: trackrecon_parameters.json
conf/base/: catalog.yml  parameters.yml
notebooks/: dataloader.py  layout.r  plot.r  spectral_gap_calculator.py
notebooks/results/MAXCUT/: spectral_gap_evolution_fraction01.csv
results/MAXCUT/: spectral_gap_evolution.csv
results/TR/: spectral_gap_evolution.csv
src/: data_utils.py  maxcut_utils.py  qaoa_utils.py  spectral_gap_calculator.py  track_reconstruction_utils.py
src/fromhopetoheuristics/: __init__.py  __main__.py  pipeline_registry.py
src/fromhopetoheuristics/datasets/: composed_dataset.py  qallse_split.py
src/fromhopetoheuristics/pipelines/adiabatic_maxcut/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/adiabatic_trackrec/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/anneal_schedule/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/export/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/generation/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/hyperparameter_study/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/qaoa_maxcut/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/qaoa_trackrec/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/qubo/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/science/: nodes.py  pipeline.py
src/fromhopetoheuristics/pipelines/visualization/: nodes.py  pipeline.py
src/fromhopetoheuristics/utils/: data_structures.py  data_utils.py  hyperparam_optimizer.py  maxcut_utils.py  model.py  plot_utils.py  qaoa_utils.py  spectral_gap_calculator.py  track_reconstruction_utils.py
src/qallse_wrapper/: data_structures.py  main.py  model.py
tests/: test_run.py
(+193 files in other folders)
