[tool.poetry]
name = "fromhopetoheuristics"
version = "0.1.0"
description = ""
authors = ["Melvin Strobl <melvin.strobl@kit.edu>", "Maja Franz <maja.franz@oth-regensburg.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.2.4"
qiskit-algorithms = "^0.3.0"
networkx = "^3.3"
scipy = "1.13.0"
trackml = { path = "./trackml-library" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
