[project]
name = "fromhopetoheuristics"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
fromhopetoheuristics = "fromhopetoheuristics.__main__:main"

[tool.kedro]
package_name = "fromhopetoheuristics"
project_name = "FromHopeToHeuristics"
kedro_init_version = "0.19.8"
tools = [ "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/fromhopetoheuristics -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.poetry]
name = "fromhopetoheuristics"
version = "0.1.0"
description = ""
authors = ["Melvin Strobl <melvin.strobl@kit.edu>", "Maja Franz <maja.franz@oth-regensburg.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
qiskit = "^1.2.4"
qiskit-algorithms = "^0.3.0"
networkx = "^3.3"
scipy = "^1.14.1"
qallse = { path = "./hepqpr-qallse" }
kedro = "^0.19.8"
kedro-viz = "^10.0.0"
kedro-datasets = "^5.1.0"
optuna = "^4.0.0"
optuna-dashboard = "^0.17.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
licensecheck = "^2024.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro_telemetry]
project_id = "02bc8c61d7e64f47b985e83579e35049"
